--- a/Ebackend/template/base.html
+++ b/Ebackend/template/base.html
@@ -1,3 +1,4 @@
+{%load static%}
 <!DOCTYPE html>
 <html>
     <head>
@@ -5,10 +6,10 @@
         <meta name= "viewport" content="width=device-width, initial-scale=1">
         <meta name="Description" content="E-commerce store">
         <meta name="Keywords" content="commerce, e-commerce, store">
-        <link rel="stylesheet" href="../static/css/style.css" type="text/css">
-        <link rel="stylesheet" href="../static/css/signin_nd_up.css">
+        <link rel="stylesheet" href="{%static 'css/style.css'%}" type="text/css">
+        <link rel="stylesheet" href="{%static 'css/signin_nd_up.css'%}">
         <link rel="icon" type="img/jpg" href="">
-        <link rel="stylesheet" type="text/css" href="../static/css/media_queries.css">
+        <link rel="stylesheet" type="text/css" href="{%static 'css/media_queries.css'%}">
         <script src="https://kit.fontawesome.com/c676ebde69.js" crossorigin="anonymous"></script>
     </head>
     <body class="body">
